# oxideav-ifc

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: decoder.rs  error.rs  external.rs  geo.rs  geometry.rs  header.rs  lexer.rs  lib.rs  material.rs  parser.rs  props.rs  schema.rs  value.rs
tests/: geometry_fixtures.rs  parse_fixtures.rs  property_sets.rs  registry_stub.rs  typed_model.rs
