[package]
name = "oxideav-ifc"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-ifc"
homepage = "https://github.com/OxideAV/oxideav-ifc"
authors = ["Mark Karpeles"]
description = "Pure-Rust IFC (ISO 16739 BIM) reader — clean-room STEP physical-file (ISO 10303-21) parser for .ifc building models"
readme = "README.md"
keywords = ["ifc", "bim", "step", "iso-10303", "3d"]
categories = ["multimedia", "rendering::data-formats", "parser-implementations"]

[dependencies]
# Both framework deps are gated behind the default-on `registry`
# feature so BIM-tooling consumers can depend on `oxideav-ifc` with
# `default-features = false` and get only the standalone STEP parser
# (`parse_step` / `StepFile` / crate-local `Error`) built from std
# primitives, with no framework dependency tree.
oxideav-core = { version = "0.1", optional = true }
oxideav-mesh3d = { version = "0.0", optional = true, default-features = false }

[features]
default = ["registry"]

# Wires up the `Mesh3DDecoder` trait implementation + the
# `Mesh3DRegistry` registration helper so the crate plugs into the
# OxideAV 3D-format registry. Phase 1 registers a structure-validating
# stub (probes the `ISO-10303-21;` magic, parses the full exchange
# structure, and reports geometry tessellation as unsupported until
# Phase 3 lands).
registry = ["dep:oxideav-core", "dep:oxideav-mesh3d", "oxideav-mesh3d/registry"]
